erDiagram
    Trend {
        int trend_id pk
        int date_id FK
        int location_id FK
        int product_1st FK
        int product_2nd FK
        int product_3rd FK
        int vtrend_id FK
        real total_sales
        real total_quantity
        real total_profit
        int total_orders
        real avg_discount
        real total_views
        real total_likes
        real total_dislikes
        real total_comments
    }

    Time {
        int date_id PK
        int year
        int month
        int quarter
        int day
        text dayofweek
    }

    Location {
        int location_id PK
        text state
        text region
        int population
        text metro_statu
        real avg_household
        real avg_age
        real male_rate
        text race_distribution
        text marital_distribution
        text citizenship_distribution
        text employment_distribution
        text education_distribution
    }

    Product {
        int product_id PK
        text product
        text category
        int orders_Corporate
        real sales_Corporate
        real quantity_Corporate
        real profit_Corporate
        real avg_discount_Corporate
        int orders_Consumer
        real sales_Consumer
        real quantity_Consumer
        real profit_Consumer
        real avg_discount_Consumer
        int orders_Home_Office
        real sales_Home_Office
        real quantity_Home_Office
        real profit_Home_Office
        real avg_discount_Home_Office
    }

    YouTubeVideoTrend {
        int vtrend_id PK
        text top_categories
        text video_1st
        text description_1st
        text engagement_1st
        text video_2nd
        text description_2nd
        text engagement_2nd
        text video_3rd
        text description_3rd
        text engagement_3rd
    }


    Trend }o--|| Time : "by time"
    Trend }o--|| Location : "in region"
    Trend }o--|| Product : "about product"
    Trend }o--|| YouTubeVideoTrend : "about YouTube video"

